# rusty_keychain

./: Cargo.toml  README.md  rusty_keychain.toml
src/: argparse.rs  cli_utils.rs  config.rs  keychain_crypto.rs  lib.rs  main.rs  shell.rs
