[package]
name = "rusty_keychain"
version = "0.1.0"
authors = ["mant"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.8"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-ctr = "0.6.0"
ring = "0.16.20"

[dev-dependencies]
tempdir = "0.3"