[package]
name = "rusty_keychain"
version = "0.1.0"
authors = ["mant"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.8"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = "0.7.0"
ctr = "0.8.0"
ring = "0.16.20"
rand = "0.8.3"
shrust = "0.0.7"
rpassword = "5.0"
confy = "0.4.0"

[dev-dependencies]
tempdir = "0.3"